--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,11 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<%= link_to "Project name", "#", :class => "navbar-brand" %>
+				<%= link_to "Omnomnom", root_path, :class => "navbar-brand" %>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="#">Home</a></li>
+					<%= nav_link_to 'Orders', root_path %>
 					<% if user_signed_in? %>
 						<%= nav_link_to 'Items', items_path %>
 						<%= nav_link_to 'Edit account', edit_user_registration_path %>
